fix: z-index 추가

--- a/eventory-client/src/assets/css/Header.css
+++ b/eventory-client/src/assets/css/Header.css
@@ -161,6 +161,8 @@
 
 .header__profile-container {
   position: relative;
+  left: 30px;
+  z-index: 9999;
 }
 
 .header__profile-button {
